--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,31 @@
 .classpath
 .DS_Store
 *.class
+
+*.class
+
+*.class
+
+QuizSite/bin/question/MultipleChoiceQuestion.class
+
+QuizSite/bin/question/PictureQuestion.class
+
+QuizSite/bin/question/Question.class
+
+QuizSite/bin/question/ResponseQuestion.class
+
+QuizSite/bin/question/ResponseQuestion.class
+
+QuizSite/bin/question/Question.class
+
+QuizSite/bin/question/PictureQuestion.class
+
+QuizSite/bin/question/MultipleChoiceQuestion.class
+
+QuizSite/bin/question/ResponseQuestion.class
+
+QuizSite/bin/question/Question.class
+
+QuizSite/bin/question/PictureQuestion.class
+
+QuizSite/bin/question/MultipleChoiceQuestion.class
